--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,8 +1,64 @@
+av==14.0.1
 blinker==1.9.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+coloredlogs==15.0.1
+ctranslate2==4.5.0
+faster-whisper==1.1.1
+filelock==3.16.1
 Flask==3.1.0
 Flask-Cors==5.0.0
+flatbuffers==24.12.23
+fsspec==2024.12.0
+huggingface-hub==0.27.1
+humanfriendly==10.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+joblib==1.4.2
+llvmlite==0.43.0
 MarkupSafe==3.0.2
+more-itertools==10.6.0
+mpmath==1.3.0
+networkx==3.4.2
+nltk==3.9.1
+numba==0.60.0
+numpy==2.0.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+onnxruntime==1.20.1
+openai-whisper==20240930
+packaging==24.2
+protobuf==5.29.3
+pycparser==2.22
+pydub==0.25.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.2
+setuptools==75.8.0
+six==1.17.0
+soundfile==0.13.0
+SpeechRecognition==3.14.0
+sympy==1.13.1
+tiktoken==0.8.0
+tokenizers==0.21.0
+torch==2.5.1
+tqdm==4.67.1
+transformers==4.48.0
+triton==3.1.0
+typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
