--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.8.0
 av==14.0.1
 blinker==1.9.0
 certifi==2024.12.14
@@ -6,17 +8,22 @@ charset-normalizer==3.4.1
 click==8.1.8
 coloredlogs==15.0.1
 ctranslate2==4.5.0
+distro==1.9.0
 faster-whisper==1.1.1
 filelock==3.16.1
 Flask==3.1.0
 Flask-Cors==5.0.0
 flatbuffers==24.12.23
 fsspec==2024.12.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.27.1
 humanfriendly==10.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jiter==0.8.2
 joblib==1.4.2
 llvmlite==0.43.0
 MarkupSafe==3.0.2
@@ -39,10 +46,13 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 onnxruntime==1.20.1
+openai==1.59.8
 openai-whisper==20240930
 packaging==24.2
 protobuf==5.29.3
 pycparser==2.22
+pydantic==2.10.5
+pydantic_core==2.27.2
 pydub==0.25.1
 PyYAML==6.0.2
 regex==2024.11.6
@@ -50,6 +60,7 @@ requests==2.32.3
 safetensors==0.5.2
 setuptools==75.8.0
 six==1.17.0
+sniffio==1.3.1
 soundfile==0.13.0
 SpeechRecognition==3.14.0
 sympy==1.13.1
@@ -62,3 +73,4 @@ triton==3.1.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
+wheel==0.44.0
