--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         - action: sync
           path: ./backend-flask
           target: /backend-flask
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
 
   frontend:
     build:
