fix: tentativa de dar suporte a dispositivos MAC

--- a/backend-flask/Dockerfile.mac
+++ b/backend-flask/Dockerfile.mac
@@ -1,23 +1,21 @@
 FROM python:3.10-slim
-
 WORKDIR /backend-flask
-
 ENV FLASK_APP=/backend-flask/server.py
 ENV FLASK_RUN_HOST=0.0.0.0
+ENV PIP_EXTRA_INDEX_URL=https://download.pytorch.org/whl/cpu
 
-# for converting audio files to wav
 RUN apt-get update && \
     apt-get install -y \
     ffmpeg \
     libsndfile1 \
     libopus0 \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt requirements.txt
+COPY requirements.mac.txt requirements.txt
+RUN pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5000
-
 COPY . .
-
 CMD ["flask", "--app", "server.py", "run", "--debug"]
