--- a/backend-flask/Dockerfile.mac
+++ b/backend-flask/Dockerfile.mac
@@ -10,10 +10,11 @@ RUN apt-get update && \
     libsndfile1 \
     libopus0 \
     build-essential \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.mac.txt requirements.txt
-RUN pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+RUN pip install --no-cache-dir torch==2.5.1+cpu torchvision==0.16.1+cpu torchaudio==2.5.1+cpu --index-url https://download.pytorch.org/whl/cpu
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5000
