--- a/backend-flask/requirements.mac.txt
+++ b/backend-flask/requirements.mac.txt
@@ -1,8 +1,8 @@
 annotated-types==0.7.0
-anyio==4.8.0
-av==14.0.1
-blinker==1.9.0
-blis==1.2.0
+anyio==4.5.2
+av==12.3.0
+blinker==1.8.2
+blis==0.7.11
 catalogue==2.0.10
 certifi==2024.12.14
 cffi==1.17.1
@@ -14,9 +14,10 @@ confection==0.1.5
 ctranslate2==4.5.0
 cymem==2.0.11
 distro==1.9.0
-faster-whisper==1.1.1
+exceptiongroup==1.2.2
+faster-whisper==1.1.0
 filelock==3.16.1
-Flask==3.1.0
+Flask==3.0.3
 Flask-Cors==5.0.0
 flatbuffers==24.12.23
 fsspec==2024.12.0
@@ -26,35 +27,36 @@ httpx==0.28.1
 huggingface-hub==0.27.1
 humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
-langcodes==3.5.0
+langcodes==3.4.1
 language_data==1.3.0
-llvmlite==0.43.0
+llvmlite==0.41.1
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+MarkupSafe==2.1.5
 mdurl==0.1.2
-more-itertools==10.6.0
+more-itertools==10.5.0
 mpmath==1.3.0
 murmurhash==1.0.12
-networkx==3.4.2
+networkx==3.1
 nltk==3.9.1
-numba==0.60.0
-numpy==2.0.2
-onnxruntime==1.20.1
-openai==1.59.8
-openai-whisper==20240930
+numba==0.58.1
+numpy==1.24.1
+onnxruntime==1.19.2
+openai==1.59.9
 packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
+pandas==2.0.3
+pillow==10.2.0
+plac==1.1.3
 plotly==5.24.1
 preshed==3.0.9
 protobuf==5.29.3
 pycparser==2.22
-pydantic==2.10.5
+pydantic==1.9.0
 pydantic_core==2.27.2
 pydub==0.25.1
 Pygments==2.19.1
@@ -66,33 +68,35 @@ regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-sentence-transformers==3.3.1
+scikit-learn==1.3.2
+scipy==1.10.1
+sentence-transformers==2.0.0
 sentencepiece==0.2.0
-setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
 sniffio==1.3.1
 soundfile==0.13.0
 SpeechRecognition==3.14.0
-srsly==2.5.1
-sympy==1.13.1
+srsly==2.4.8
+sympy==1.13.3
 tenacity==9.0.0
-thinc==8.3.4
+thinc==8.2.4
 threadpoolctl==3.5.0
-tiktoken==0.8.0
-tokenizers==0.21.0
+tiktoken==0.7.0
+tokenizers==0.20.3
+torch==1.10.0+cpu
+torchaudio==0.10.0+cpu
+torchvision==0.11.0+cpu
 tqdm==4.67.1
-transformers==4.48.0
+transformers==4.46.3
 typer==0.15.1
 typing_extensions==4.12.2
-tzdata==2024.2
+tzdata==2025.1
 umap-learn==0.5.7
-urllib3==2.3.0
-wasabi==1.1.3
+urllib3==2.2.3
+wasabi==0.10.1
 weasel==0.4.1
-Werkzeug==3.1.3
-wheel==0.44.0
+Werkzeug==3.0.6
 wrapt==1.17.2
+zipp==3.20.2
