--- a/backend-flask/Dockerfile.mac
+++ b/backend-flask/Dockerfile.mac
@@ -1,4 +1,4 @@
-FROM python:3.10-slim
+FROM python:3.9-slim
 WORKDIR /backend-flask
 ENV FLASK_APP=/backend-flask/server.py
 ENV FLASK_RUN_HOST=0.0.0.0
@@ -13,8 +13,14 @@ RUN apt-get update && \
     git \
     && rm -rf /var/lib/apt/lists/*
 
+RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
+
+RUN echo 'source $HOME/.cargo/env' >> $HOME/.bashrc
+
+ENV PATH="/root/.cargo/bin:${PATH}"
+
 COPY requirements.mac.txt requirements.txt
-RUN pip install --no-cache-dir torch==2.5.1+cpu torchvision==0.16.1+cpu torchaudio==2.5.1+cpu --index-url https://download.pytorch.org/whl/cpu
+RUN pip install --no-cache-dir torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5000
