feat: Adicionado STT in real time
A feature não funciona 100% e atualmente não é possível buildar utilizando o docker, apenas localmente, pois o docker não tem suporte para dispositivos de audio (não encontrei maneiras de resolver), esse commit nao é para ser juntado à main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
           target: /backend-flask
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+    devices:
+      - /dev/input
+      - "/dev/snd:/dev/snd"
 
   frontend:
     build:
