--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -65,6 +65,7 @@ pillow==11.1.0
 plotly==5.24.1
 preshed==3.0.9
 protobuf==5.29.3
+PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.10.5
 pydantic_core==2.27.2
